<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context="uz.dsavdo.emakro.ui.enter.EnterFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/enter_background_image" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/makro_logo"
        app:layout_constraintBottom_toTopOf="@id/tv_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_select_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/text_select_language"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/language_uz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_next" />

    <LinearLayout
        android:id="@+id/language_uz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/select_language_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/language_ru"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_select_language">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/uz" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/language_ru"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/select_language_background"
        app:layout_constraintBottom_toBottomOf="@id/language_uz"
        app:layout_constraintEnd_toStartOf="@id/language_eng"
        app:layout_constraintStart_toEndOf="@id/language_uz"
        app:layout_constraintTop_toTopOf="@id/language_uz">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ru" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/language_eng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/select_language_background"
        app:layout_constraintBottom_toBottomOf="@id/language_uz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/language_ru"
        app:layout_constraintTop_toTopOf="@id/language_uz">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/eng" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/text_welcome"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/et_cardview_number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />


    <LinearLayout
        android:id="@+id/et_cardview_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="20dp"
        android:background="@drawable/enter_phone_background"
        android:elevation="@dimen/carbon_grid8"
        android:padding="6dp"
        app:layout_constraintBottom_toTopOf="@id/btn_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_registration_number"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@null"
            android:digits="0123456789 -."
            android:hint="+998"
            android:inputType="number"
            android:maxLines="1"
            android:padding="6dp"
            android:textColor="@color/black"
            android:textColorHint="@color/semi_black" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_next"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:background="@drawable/next_button"
        android:enabled="false"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:text="@string/text_next"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/tv_select_language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_cardview_number" />


</androidx.constraintlayout.widget.ConstraintLayout>